Add my generators, remove all others

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,9 +40,9 @@
   "customized.ores": "Ores",
   "customized.structures": "Structures",
   "cutoff": "Cutoff",
-  "developed_by": "Developed by",
+  "developed_by": "Originally developed by",
   "disabled": "Disabled",
-  "donate": "Donate",
+  "donate": "Donate to original developer",
   "download": "Download",
   "duplicate": "Duplicate",
   "enabled": "Enabled",
@@ -61,128 +61,13 @@
   "generate_new_color": "Generate new color",
   "generate_new_seed": "Generate new seed",
   "generate_new_uuid": "Generate new UUID",
-  "generator.ad_astra:planets": "Ad Astra Planet",
-  "generator.advancement": "Advancement",
-  "generator.atlas": "Atlas",
-  "generator.banner_pattern": "Banner Pattern",
-  "generator.block_definition": "Blockstate",
-  "generator.browse_available": "Browse available generators for %0%",
-  "generator.cat_variant": "Cat Variant",
-  "generator.chat_type": "Chat Type",
-  "generator.chicken_variant": "Chicken Variant",
-  "generator.cow_variant": "Cow Variant",
-  "generator.create:recipes": "Create Recipes",
-  "generator.damage_type": "Damage Type",
-  "generator.dialog": "Dialog",
-  "generator.dimension": "Dimension",
-  "generator.dimension_type": "Dimension Type",
-  "generator.enchantment": "Enchantment",
-  "generator.enchantment_provider": "Enchantment Provider",
-  "generator.equipment": "Equipment",
-  "generator.error_max_version": "This generator is not available in versions above %0%",
-  "generator.error_min_version": "The minimum version for this generator is %0%",
-  "generator.fabric:fabric_mod_json": "fabric.mod.json",
-  "generator.fabric:dependency_overrides": "fabric_loader_dependencies.json",
-  "generator.font": "Font",
-  "generator.frog_variant": "Frog Variant",
-  "generator.immersive_weathering:block_growth": "Block Growth",
-  "generator.instrument": "Instrument",
-  "generator.item_definition": "Item",
-  "generator.item_modifier": "Item Modifier",
-  "generator.jukebox_song": "Jukebox Song",
-  "generator.lang": "Language",
-  "generator.loot_table": "Loot Table",
-  "generator.model": "Model",
-  "generator.texture_meta": "Texture Metadata",
-  "generator.neoforge:biome_modifier": "Biome Modifier",
-  "generator.neoforge:data_map_acceptable_villager_distances": "Acceptable Villager Distances Data Map",
-  "generator.neoforge:data_map_compostables": "Compostables Data Map",
-  "generator.neoforge:data_map_furnace_fuels": "Furnace Fuels Data Map",
-  "generator.neoforge:data_map_monster_room_mobs": "Monster Room Mobs Data Map",
-  "generator.neoforge:data_map_oxidizables": "Oxidizables Data Map",
-  "generator.neoforge:data_map_parrot_imitations": "Parrot Imitations Data Map",
-  "generator.neoforge:data_map_raid_hero_gifts": "Raid Hero Gifts Data Map",
-  "generator.neoforge:data_map_strippables": "Strippables Data Map",
-  "generator.neoforge:data_map_vibration_frequencies": "Vibration Frequencies Data Map",
-  "generator.neoforge:data_map_villager_types": "Biome Villager Types Data Map",
-  "generator.neoforge:data_map_waxables": "Waxables Data Map",
-  "generator.neoforge:structure_modifier": "Structure Modifier",
-  "generator.not_found": "Cannot find generator \"%0%\"",
-  "generator.ohthetreesyoullgrow:configured_feature": "OTTYG Feature",
-  "generator.sky_aesthetics:sky": "Custom Sky",
-  "generator.pack_mcmeta": "pack.mcmeta",
-  "generator.painting_variant": "Painting Variant",
-  "generator.pig_variant": "Pig Variant",
-  "generator.post_effect": "Post Effect",
-  "generator.predicate": "Predicate",
-  "generator.recipe": "Recipe",
-  "generator.switch_version": "Switch to %0%",
-  "generator.tag/banner_pattern": "Banner Pattern Tag",
-  "generator.tag/block": "Block Tag",
-  "generator.tag/cat_variant": "Cat Variant Tag",
-  "generator.tag/damage_type": "Damage Type Tag",
-  "generator.tag/dialog": "Dialog Tag",
-  "generator.tag/enchantment": "Enchantment Tag",
-  "generator.tag/entity_type": "Entity Type Tag",
-  "generator.tag/fluid": "Fluid Tag",
-  "generator.tag/game_event": "Game Event Tag",
-  "generator.tag/instrument": "Instrument Tag",
-  "generator.tag/item": "Item Tag",
-  "generator.tag/painting_variant": "Painting Variant Tag",
-  "generator.tag/point_of_interest_type": "Point of Interest Type Tag",
-  "generator.tag/timeline": "Timeline Tag",
-  "generator.tag/worldgen/biome": "Biome Tag",
-  "generator.tag/worldgen/flat_level_generator_preset": "Flat World Preset Tag",
-  "generator.tag/worldgen/structure": "Structure Tag",
-  "generator.tag/worldgen/structure_set": "Structure Set Tag",
-  "generator.tag/worldgen/world_preset": "World Preset Tag",
-  "generator.tag/zombie_nautilus_variant": "Zombie Nautilus Variant Tag",
-  "generator.test_instance": "Test Instance",
-  "generator.test_environment": "Test Environment",
-  "generator.text_component": "Text Component",
-  "generator.thermoo:environment_provider": "Environment Provider",
-  "generator.thermoo:environment": "Environment",
-  "generator.thermoo:temperature_effect": "Temperature Effect",
-  "generator.thermoo:predicate": "Thermoo Predicates",
-  "generator.timeline": "Timeline",
-  "generator.pixelmon:raid_ally_set": "Pixelmon Raid Ally Set",
-  "generator.pixelmon:raid_spawn_set": "Pixelmon Raid Spawn Set",
-  "generator.pixelmon:spawn_replacement": "Pixelmon Spawn Replacement",
-  "generator.pixelmon:type": "Pixelmon Type",
-  "generator.pixelmon:growth": "Pixelmon Growth",
-  "generator.pixelmon:interaction_event": "Pixelmon Interaction Event",
-  "generator.pixelmon:research": "Pixelmon Research",
-  "generator.pixelmon:research_trigger": "Pixelmon Research Trigger",
-  "generator.pixelmon:npc_preset": "Pixelmon NPC Preset",
-  "generator.pixelmon:pokedex": "Pokedex",
-  "generator.pixelmon:pokedex_trigger": "Pokedex Trigger",
-  "generator.pixelmon:pokedex_region": "Region",
-  "generator.trial_spawner": "Trial Spawner",
-  "generator.trim_material": "Trim Material",
-  "generator.trim_pattern": "Trim Pattern",
-  "generator.wolf_variant": "Wolf Variant",
-  "generator.wolf_sound_variant": "Wolf Sound Variant",
-  "generator.world": "World Settings",
-  "generator.worldgen/biome": "Biome",
-  "generator.worldgen/configured_carver": "Configured Carver",
-  "generator.worldgen/configured_feature": "Configured Feature",
-  "generator.worldgen/configured_structure_feature": "Structure Feature",
-  "generator.worldgen/configured_surface_builder": "Surface Builder",
-  "generator.worldgen/density_function": "Density Function",
-  "generator.worldgen/flat_level_generator_preset": "Flat World Preset",
-  "generator.worldgen/noise": "Noise",
-  "generator.worldgen/noise_settings": "Noise Settings",
-  "generator.worldgen/placed_feature": "Placed Feature",
-  "generator.worldgen/processor_list": "Processor List",
-  "generator.worldgen/structure": "Structure",
-  "generator.worldgen/structure_set": "Structure Set",
-  "generator.worldgen/template_pool": "Template Pool",
-  "generator.worldgen/world_preset": "World Preset",
-  "generator.zombie_nautilus_variant": "Zombie Nautilus Variant",
+  "generator.rewards:calendar": "Advent Calendar",
+  "generator.rewards:progression": "Progression",
+  "generator.itemstack:itemstack": "Item stack",
   "generators.all": "All generators",
   "generators.no_results": "No generators for this query",
   "generators.partners": "Modded Generators",
-  "generators.popular": "Popular Generators",
+  "generators.recommended": "Recommended Generators",
   "generators.recent": "Recently Used Generators",
   "generators.search": "Search generators",
   "github": "GitHub",
@@ -220,17 +105,8 @@
   "normalize": "Normalize",
   "not_found.description": "The page you were looking for does not exist.",
   "output_settings": "Output settings",
-  "partner.ad_astra": "Ad Astra",
+  "partner.rewards": "rewards",
   "partner.create": "Create",
-  "partner.fabric": "Fabric",
-  "partner.immersive_weathering": "Immersive Weathering",
-  "partner.lithostitched": "Lithostitched",
-  "partner.neoforge": "NeoForge",
-  "partner.obsidian": "Obsidian",
-  "partner.ohthetreesyoullgrow": "Oh The Trees You'll Grow",
-  "partner.sky_aesthetics": "Sky Aesthetics",
-  "partner.thermoo": "Thermoo",
-  "partner.pixelmon": "Pixelmon",
   "presets": "Presets",
   "presets.no_results": "No presets",
   "presets.no_results_for_query": "No presets for this query",
@@ -326,7 +202,7 @@
   "title.generator_category": "%0% Generators",
   "title.generators": "Data Pack Generators",
   "title.guides": "Data Pack Guides",
-  "title.home": "Data Pack Generators",
+  "title.home": "Rewards Generators",
   "title.new_project": "Create a new project",
   "title.partners": "Modded Generators",
   "title.project": "%0% Project",
